--- a/ChoresForCoinsiOS/Main.storyboard
+++ b/ChoresForCoinsiOS/Main.storyboard
@@ -9,6 +9,7 @@
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -2932,7 +2933,9 @@
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bok-QF-QLQ">
                                 <rect key="frame" x="282" y="44" width="85" height="30"/>
-                                <state key="normal" title="Take Picture"/>
+                                <state key="normal" title="Take Picture">
+                                    <color key="titleColor" name="CFCDarkBlue"/>
+                                </state>
                                 <connections>
                                     <action selector="takeProfilePic:" destination="ABl-CU-dru" eventType="touchUpInside" id="Orb-Ah-jrz"/>
                                 </connections>
@@ -3888,7 +3891,7 @@
                     <connections>
                         <outlet property="bgImage" destination="OBJ-Pl-dDb" id="xII-PD-dpj"/>
                         <outlet property="choreDescriptionTextView" destination="3dN-cM-P81" id="vsx-5C-11q"/>
-                        <outlet property="choreImageImageView" destination="fIv-eO-o4G" id="eds-Sw-JMv"/>
+                        <outlet property="choreImageImageView" destination="fIv-eO-o4G" id="k5k-Kc-XfR"/>
                         <outlet property="choreNameLabel" destination="kRu-Y7-VSz" id="6bb-mE-Ytb"/>
                         <outlet property="choreNoteTextView" destination="TqE-sJ-AaN" id="fWq-ZB-RpG"/>
                         <outlet property="choreValueLabel" destination="JZC-9z-9qp" id="8Xa-6B-Rd8"/>
@@ -4533,6 +4536,9 @@
         <image name="redX" width="67" height="67"/>
         <image name="topBar_L" width="766" height="55"/>
         <image name="whiteBG" width="768" height="1023"/>
+        <namedColor name="CFCDarkBlue">
+            <color red="0.17599999904632568" green="0.36500000953674316" blue="0.52899998426437378" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="Gxm-IN-KRx"/>
