--- a/ChoresForCoinsiOS/Main.storyboard
+++ b/ChoresForCoinsiOS/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="b6P-mi-Mj5">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="HjS-71-q6J">
     <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -517,6 +517,7 @@ Andrew Harrington</string>
                         <outlet property="sentParentKeyButton" destination="rFg-dU-CR4" id="dew-tq-l47"/>
                         <outlet property="updateProfilePicView" destination="HsM-2G-TSf" id="PDf-4Y-GqU"/>
                         <outlet property="usernameTextField" destination="GxR-fO-VoJ" id="ato-8r-wSn"/>
+                        <segue destination="b6P-mi-Mj5" kind="presentation" identifier="toSignInFromLogout" id="TeC-CK-6Cx"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1xw-xL-33h" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -2730,6 +2731,25 @@ Andrew Harrington</string>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zos-2x-C8E" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-2827" y="-1495"/>
+        </scene>
+        <!--Check If Logged In View Controller-->
+        <scene sceneID="b9v-Hs-9lC">
+            <objects>
+                <viewController id="HjS-71-q6J" customClass="CheckIfLoggedInViewController" customModule="ChoresForCoinsiOS" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="qVS-sr-GY2">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="NtT-Ag-6tt"/>
+                    </view>
+                    <connections>
+                        <segue destination="b6P-mi-Mj5" kind="presentation" identifier="toSignInFromRoot" id="hAr-3U-cxV"/>
+                        <segue destination="vEf-KN-FAV" kind="presentation" identifier="toMain" id="cgl-aU-RUG"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="USs-eu-Tu9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2758" y="-546"/>
         </scene>
         <!--Sign Up Parent Child View Controller-->
         <scene sceneID="Pwm-ph-cjt">
@@ -5536,8 +5556,9 @@ Andrew Harrington</string>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="Gxm-IN-KRx"/>
-        <segue reference="mSl-Ec-VBM"/>
+        <segue reference="bm7-WQ-ArU"/>
         <segue reference="q0e-xW-FaS"/>
+        <segue reference="TeC-CK-6Cx"/>
         <segue reference="TW0-XL-iud"/>
         <segue reference="OXB-qQ-rBy"/>
     </inferredMetricsTieBreakers>
