--- a/ChoresForCoinsiOS/Main.storyboard
+++ b/ChoresForCoinsiOS/Main.storyboard
@@ -204,18 +204,25 @@ Andrew Harrington</string>
                                     <constraint firstItem="dg4-dM-SJT" firstAttribute="width" secondItem="hu1-17-zjp" secondAttribute="width" id="fng-K1-ZpW"/>
                                 </constraints>
                             </view>
+                            <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="RX4-rL-PxP">
+                                <rect key="frame" x="0.0" y="101" width="375" height="628"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="Gxq-DE-bZS" firstAttribute="top" secondItem="cf5-cM-o3q" secondAttribute="bottom" id="6Yl-aR-SD7"/>
+                            <constraint firstItem="RX4-rL-PxP" firstAttribute="leading" secondItem="xOL-dX-BLh" secondAttribute="leading" id="7kP-9h-M8s"/>
                             <constraint firstItem="Gxq-DE-bZS" firstAttribute="leading" secondItem="xOL-dX-BLh" secondAttribute="leading" id="84I-er-MbM"/>
+                            <constraint firstItem="RX4-rL-PxP" firstAttribute="bottom" secondItem="xOL-dX-BLh" secondAttribute="bottom" id="9ni-us-sRA"/>
                             <constraint firstItem="cf5-cM-o3q" firstAttribute="top" secondItem="xOL-dX-BLh" secondAttribute="top" id="DO9-HK-bHw"/>
+                            <constraint firstItem="RX4-rL-PxP" firstAttribute="trailing" secondItem="xOL-dX-BLh" secondAttribute="trailing" id="KJG-gQ-t4V"/>
                             <constraint firstItem="xOL-dX-BLh" firstAttribute="bottom" secondItem="Gxq-DE-bZS" secondAttribute="bottom" id="NoJ-af-9np"/>
                             <constraint firstItem="cf5-cM-o3q" firstAttribute="trailing" secondItem="xOL-dX-BLh" secondAttribute="trailing" id="PhM-SH-6i3"/>
                             <constraint firstItem="cf5-cM-o3q" firstAttribute="leading" secondItem="xOL-dX-BLh" secondAttribute="leading" id="RWW-qc-kf9"/>
                             <constraint firstItem="yI7-Hk-fDK" firstAttribute="width" secondItem="MmR-Ow-AS6" secondAttribute="width" multiplier="0.2" id="SKG-KL-wiq"/>
                             <constraint firstItem="W9a-Zf-rVU" firstAttribute="width" secondItem="MmR-Ow-AS6" secondAttribute="width" id="THp-Zp-fPt"/>
                             <constraint firstItem="hu1-17-zjp" firstAttribute="width" secondItem="MmR-Ow-AS6" secondAttribute="width" multiplier="0.5" id="VlD-3J-SNU"/>
+                            <constraint firstItem="RX4-rL-PxP" firstAttribute="top" secondItem="cf5-cM-o3q" secondAttribute="bottom" id="bwG-5D-NSY"/>
                             <constraint firstItem="hu1-17-zjp" firstAttribute="trailing" secondItem="xOL-dX-BLh" secondAttribute="trailing" id="i2z-8Z-H6P"/>
                             <constraint firstItem="cf5-cM-o3q" firstAttribute="height" secondItem="MmR-Ow-AS6" secondAttribute="height" multiplier="0.07" id="ifA-mG-4TT"/>
                             <constraint firstItem="W9a-Zf-rVU" firstAttribute="centerY" secondItem="xOL-dX-BLh" secondAttribute="centerY" id="jWg-LE-09j"/>
@@ -247,6 +254,7 @@ Andrew Harrington</string>
                         <color key="badgeColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </tabBarItem>
                     <connections>
+                        <outlet property="animCoinEarnedView" destination="RX4-rL-PxP" id="hqJ-Lv-COv"/>
                         <outlet property="bgImage" destination="W9a-Zf-rVU" id="shG-VX-325"/>
                         <outlet property="childRedeemView" destination="hu1-17-zjp" id="xVZ-iO-uER"/>
                         <outlet property="coinAmtLabel" destination="vJj-gy-wFi" id="dWZ-Gh-ubG"/>
@@ -1523,7 +1531,7 @@ Andrew Harrington</string>
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w2p-xC-m4m">
-                                        <rect key="frame" x="55" y="17.666666666666664" width="84" height="20.333333333333336"/>
+                                        <rect key="frame" x="55" y="17.333333333333336" width="84" height="20.333333333333336"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                         <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
@@ -1532,7 +1540,7 @@ Andrew Harrington</string>
                                         </variation>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZVM-2r-Tl5">
-                                        <rect key="frame" x="302.66666666666669" y="18.666666666666664" width="11.333333333333314" height="20.333333333333336"/>
+                                        <rect key="frame" x="302.66666666666669" y="18.333333333333336" width="11.333333333333314" height="20.333333333333336"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                         <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
@@ -1678,7 +1686,7 @@ Andrew Harrington</string>
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GbC-Hw-56e">
-                                        <rect key="frame" x="56" y="18.666666666666664" width="84" height="20.333333333333336"/>
+                                        <rect key="frame" x="56" y="17.333333333333336" width="84" height="20.333333333333336"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                         <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
@@ -1687,7 +1695,7 @@ Andrew Harrington</string>
                                         </variation>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fny-wj-t1c">
-                                        <rect key="frame" x="302.66666666666669" y="18.666666666666664" width="11.333333333333314" height="20.333333333333336"/>
+                                        <rect key="frame" x="302.66666666666669" y="18.333333333333336" width="11.333333333333314" height="20.333333333333336"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                         <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
@@ -3871,7 +3879,7 @@ Andrew Harrington</string>
                                 <rect key="frame" x="0.0" y="117.99999999999999" width="375" height="238.66666666666663"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="niceWork" translatesAutoresizingMaskIntoConstraints="NO" id="fap-2v-KdD">
-                                        <rect key="frame" x="-119" y="23.333333333333343" width="613.33333333333337" height="191"/>
+                                        <rect key="frame" x="-119" y="23" width="613.33333333333337" height="191.33333333333334"/>
                                     </imageView>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -3950,7 +3958,7 @@ Andrew Harrington</string>
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BAb-Up-N4G">
-                                        <rect key="frame" x="47" y="11.333333333333334" width="84" height="20.333333333333329"/>
+                                        <rect key="frame" x="47" y="10.999999999999998" width="84" height="20.333333333333329"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                         <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
@@ -3959,7 +3967,7 @@ Andrew Harrington</string>
                                         </variation>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Icj-xH-Lr3">
-                                        <rect key="frame" x="312.66666666666669" y="11.333333333333334" width="11.333333333333314" height="20.333333333333329"/>
+                                        <rect key="frame" x="312.66666666666669" y="11.999999999999998" width="11.333333333333314" height="20.333333333333329"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                         <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
@@ -5818,7 +5826,7 @@ Andrew Harrington</string>
         <segue reference="mSl-Ec-VBM"/>
         <segue reference="q0e-xW-FaS"/>
         <segue reference="TeC-CK-6Cx"/>
-        <segue reference="ADq-oW-pF9"/>
-        <segue reference="w4o-uD-FV8"/>
+        <segue reference="Yia-uk-i10"/>
+        <segue reference="7DE-Oe-Cje"/>
     </inferredMetricsTieBreakers>
 </document>
